Start working on capture gamemode
Signed-off-by: Patbox <39821509+Patbox@users.noreply.github.com>