@@ -1,6 +1,7 @@
 package eu.pb4.destroythemonument.game.map;
 
 import eu.pb4.destroythemonument.DTM;
+import eu.pb4.destroythemonument.game.data.Monument;
 import eu.pb4.destroythemonument.game.logic.BaseGameLogic;
 import eu.pb4.destroythemonument.game.GameConfig;
 import eu.pb4.destroythemonument.game.data.TeamData;
@@ -14,6 +15,8 @@ import net.minecraft.server.MinecraftServer;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.util.math.MathHelper;
 import net.minecraft.world.gen.chunk.ChunkGenerator;
+import org.apache.commons.lang3.mutable.MutableInt;
+import xyz.nucleoid.map_templates.BlockBounds;
 import xyz.nucleoid.map_templates.MapTemplate;
 import xyz.nucleoid.map_templates.MapTemplateSerializer;
 import xyz.nucleoid.map_templates.TemplateRegion;
@@ -23,6 +26,7 @@ import xyz.nucleoid.plasmid.game.world.generator.TemplateChunkGenerator;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 public final class TemplateGameMap extends GameMap {
@@ -31,15 +35,15 @@ public final class TemplateGameMap extends GameMap {
     private TemplateGameMap(MapTemplate template, MapConfig config) {
         super(config, template.getBounds());
         this.template = template;
-        this.unbreakable.addAll(template.getMetadata().getRegionBounds("unbreakable").collect(Collectors.toList()));
-        for (BlockPos pos : template.getMetadata().getFirstRegionBounds("general_spawn")) {
+        this.unbreakable.addAll(template.getMetadata().getRegionBounds("unbreakable").toList());
+        for (BlockPos pos : Objects.requireNonNull(template.getMetadata().getFirstRegionBounds("general_spawn"))) {
             BlockState blockState = this.template.getBlockState(pos);
             if (blockState.isAir() || blockState.isIn(DTM.SPAWNABLE_TAG)) {
                 this.validSpawn.add(pos.toImmutable());
             }
         }
-        this.taters.addAll(template.getMetadata().getRegionBounds("tater").map((r) -> r.min()).collect(Collectors.toList()));
-        this.destroyOnStart.addAll(template.getMetadata().getRegionBounds("destroy_on_start").collect(Collectors.toList()));
+        this.taters.addAll(template.getMetadata().getRegionBounds("tater").map(BlockBounds::min).toList());
+        this.destroyOnStart.addAll(template.getMetadata().getRegionBounds("destroy_on_start").toList());
     }
 
     public static GameMap create(MinecraftServer server, MapConfig config) throws IOException {
@@ -64,6 +68,7 @@ public final class TemplateGameMap extends GameMap {
 
         List<BlockPos> validSpawnPos = new ArrayList<>();
 
+        assert spawn != null;
         for (BlockPos pos : spawn.getBounds()) {
             BlockState blockState = this.template.getBlockState(pos);
             if (blockState.isAir() || blockState.isIn(DTM.SPAWNABLE_TAG)) {
@@ -80,5 +85,17 @@ public final class TemplateGameMap extends GameMap {
                 this.world.setBlockState(pos, Blocks.AIR.getDefaultState(), Block.NOTIFY_LISTENERS, 1);
             }
         }
+    }
+
+    @Override
+    public void loadCaptureGamemodeData(GameConfig config) {
+        var i = new MutableInt();
+
+        this.template.getMetadata().getRegions("monument").forEach(region -> {
+            this.addMonument(Monument.createFrom(config, this, region, "" + i.getAndIncrement(), "capturable.", null));
+        });
+
+
+        this.template.getMetadata().getRegionBounds("monument_region").forEach(this.monumentRegionBounds::add);
     }
 }
